<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.trafficpal.DaySelection">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_select_day"
        android:padding="@dimen/abc_button_padding_horizontal_material"
        android:id="@+id/textView_days"
        android:textColor="#000000"
        android:textStyle="bold" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_monday"
        android:id="@+id/checkBox_monday"
        android:textColor="#000000"
        android:checked="true"
        android:layout_marginLeft="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:padding="@dimen/abc_action_bar_overflow_padding_end_material" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_tuesday"
        android:id="@+id/checkBox_tuesday"
        android:textColor="#000000"
        android:layout_marginLeft="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:padding="@dimen/abc_action_bar_overflow_padding_end_material"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_wednesday"
        android:id="@+id/checkBox_wednesday"
        android:checked="true"
        android:textColor="#000000"
        android:layout_marginLeft="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:padding="@dimen/abc_action_bar_overflow_padding_end_material" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_thursday"
        android:id="@+id/checkBox_thursday"
        android:checked="true"
        android:textColor="#000000"
        android:layout_marginLeft="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:padding="@dimen/abc_action_bar_overflow_padding_end_material" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_friday"
        android:id="@+id/checkBox_friday"
        android:checked="true"
        android:textColor="#000000"
        android:layout_marginLeft="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:padding="@dimen/abc_action_bar_overflow_padding_end_material" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_saturday"
        android:id="@+id/checkBox_saturday"
        android:checked="true"
        android:textColor="#000000"
        android:layout_marginLeft="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:padding="@dimen/abc_action_bar_overflow_padding_end_material" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_sunday"
        android:id="@+id/checkBox_sunday"
        android:checked="true"
        android:textColor="#000000"
        android:layout_marginLeft="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:padding="@dimen/abc_action_bar_overflow_padding_end_material" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="@dimen/abc_action_bar_progress_bar_size"
        android:gravity="right">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel_setting"
            android:id="@+id/button_cancel_setting_day"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:visibility="visible"
            android:layout_gravity="right" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Done_setting"
            android:id="@+id/button_done_setting_day"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:visibility="visible" />

    </LinearLayout>
</LinearLayout>
